updateGroupPhoto impl
